fix Digital Capability Team content. Spacing around the top of footer

--- a/src/sass/components/feedback.scss
+++ b/src/sass/components/feedback.scss
@@ -4,7 +4,7 @@
 	background: #1a1a1a;
 	font-size: 1.4rem;
 	font-weight: 400;
-	margin: auto;
+	margin-top: 6em;
 	text-align: center;
 }
 
